syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

message User {
  string _id = 1;
  string name = 2;
  string email = 3;
  repeated string roles = 4;
  bool isEmailVerified = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message GetUsersResponse {
  repeated User users = 1;
  int32 totalPages = 2;
  int32 currentPage = 3;
  int32 perPage = 4;
  int32 totalCount = 5;
}

message GetUserByIdResponse {
  string _id = 1;
  string name = 2;
  string email = 3;
  repeated string roles = 4;
  bool isEmailVerified = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}
